--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,7 @@
 			<h1>Scheme 1:</h1>
 			<div class="grid1">
 				<div class="img5">
-					<img src="images/img4.jpg" style="width: 300px;margin-left:10px;margin-right:10px;margin-top: 10px;">
+					<img src="img4.jpg" style="width: 300px;margin-left:10px;margin-right:10px;margin-top: 10px;">
 				</div>
 				<div class="c1">
 					<div style="margin: 10px;">
@@ -51,13 +51,13 @@
 					<p style="font-size: 20px;font-weight: 300;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">The Government of India has launched several schemes to promote the development of solar parks and ultra mega solar power projects in the country. One such scheme is the 'Scheme for Development of Solar Parks and Ultra Mega Solar Power Projects'. Under this scheme, the government provides financial assistance to states and their implementing agencies for setting up large-scale solar parks and solar power projects. The aim of the scheme is to reduce the cost of solar power generation by providing economies of scale, reducing risks associated with land acquisition and providing a framework for easy regulatory approvals.</p>
 				</div>
 				<div class="img6">
-					<img src="images/img6.webp" style="width: 450px; margin-top:10px;margin-left:10px;margin-right:10px;">
+					<img src="img6.webp" style="width: 450px; margin-top:10px;margin-left:10px;margin-right:10px;">
 				</div>
 			</div>
 			<h1>Scheme 3:</h1>
 			<div class="grid3">
 				<div class="img7">
-					<img src="images/img7.jpg" style="width:400px;height: 200px;">
+					<img src="img7.jpg" style="width:400px;height: 200px;">
 				</div>
 				<div class="c3">
 					<h2>National Solar Mission</h2>
@@ -81,7 +81,7 @@
 					<h1>Scheme 1:</h1>
 					<div class="grid1">
 						<div class="img5">
-							<img src="images/img8.jpg" style="width: 300px;margin-left:10px;margin-right:10px;margin-top: 10px;height: 300px;">
+							<img src="img8.jpg" style="width: 300px;margin-left:10px;margin-right:10px;margin-top: 10px;height: 300px;">
 						</div>
 						<div class="c1">
 							<div style="margin: 10px;">
@@ -99,13 +99,13 @@
 							<p style="font-size: 20px;font-weight: 300;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">The National Wind-Solar Hybrid Policy is a government scheme launched by the Ministry of New and Renewable Energy (MNRE) to promote the development of hybrid wind and solar power projects in India. The policy aims to enhance the reliability and stability of the grid by combining the complementary nature of wind and solar power. Under the policy, developers are incentivized to set up wind-solar hybrid projects through a range of financial and regulatory benefits, such as accelerated depreciation, lower transmission charges, and flexibility in the use of land.</p>
 						</div>
 						<div class="img6">
-							<img src="images/img9.jpg" style="width: 450px; margin-top:10px;margin-left:10px;margin-right:10px;">
+							<img src="img9.jpg" style="width: 450px; margin-top:10px;margin-left:10px;margin-right:10px;">
 						</div>
 					</div>
 					<h1>Scheme 3:</h1>
 					<div class="grid3">
 						<div class="img7">
-							<img src="images/img10.png" style="width:400px;height: 200px;">
+							<img src="img10.png" style="width:400px;height: 200px;">
 						</div>
 						<div class="c3">
 							<h2>Wind Energy Development Scheme</h2>
